<resources>
    <string name="app_name">Musical</string>
    <!--Songs List-->
    <string name="song_list_description">When you open the app a list with all your songs appears below.
        If you don\'t have any songs, a message will appear telling you to add songs by tapping
        the fab + button. When you do so, a new activity opens to add songs. In this new activity you
        can scan your device for media files, or you can visit various online music stores to buy new songs.</string>

    <!--Song Details-->
    <string name="song_details_similar_songs">Similar Songs</string>
    <string name="song_details_content_description_album_art">The album\'s cover art</string>
    <string name="song_details_play_now">Play Now</string>
    <string name="song_details_description">This screen shows the details for the selected song.
    From here you can play the song by tapping on the Play Now button. You can also see similar songs in a
    horizontal list. If you tap a similar song a new screen will open with the details for that song.</string>
    <string name="song_details">Song Details</string>

    <!--Song Item-->
    <string name="song_name_placeholder">Song Name</string>
    <string name="song_author_placeholder">Song Author</string>
    <string name="song_description_placeholder">This is Song Description.\n\Here Will Found Words About Author.\n\Also You Will Found
    The Other Albums Name For This Author.
    </string>
    <!--Player-->
    <string name="player_now_playing">Now Playing</string>
    <string name="player_play">Play Song</string>
    <string name="player_previous">Go to the previous song</string>
    <string name="player_next">Go to the next song</string>

    <!--Add Songs-->
    <string name="add_songs_from_device">Add songs from your device</string>
    <string name="add_songs_from_store">Buy songs online</string>
    <string name="add_songs_scan_device">Scan device</string>
    <string name="add_songs_store_name_placeholder">Store Name</string>
    <string name="add_songs_store_url_placeholder">http://musicstore.com</string>
    <string name="add_songs_store_description_placeholder">Hundreds of albums from great artists</string>
    <string name="add_songs_description">On this screen you will have the option to add media files
         from your device storage. You will also see a list of online music store where you can buy
        songs.</string>
    <string name="add">Add Songs</string>
    <string name="openStore">Open the online store</string>
</resources>
