<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.musical.Songs.SongDetails"
    android:background="@color/play_dark"
    android:orientation="vertical"
    >
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/play_dark"
        android:gravity="center"
        android:paddingTop="20dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/song_details"
            android:textSize="26sp"
            android:padding="10dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFECB3"
            android:padding="16dp"
            android:textColor="@android:color/black"
            android:textAppearance="?android:textAppearanceSmall"
            android:text="@string/song_details_description" />
    </android.support.design.widget.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        android:id="@+id/linearLayout"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/play_dark"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/play_dark"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/image_placeholder_dark"
                        android:contentDescription="@string/song_details_content_description_album_art"
                        android:scaleType="center" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_marginStart="8dp"
                            android:paddingTop="16dp"
                            android:text="@string/song_name_placeholder"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_marginStart="8dp"
                            android:paddingTop="4dp"
                            android:text="@string/song_author_placeholder"
                            android:textSize="16sp"
                            android:textStyle="bold" />


                        <Button
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableEnd="@drawable/media_controls_play_dark_small"
                            android:gravity="center"
                            android:paddingBottom="2dp"
                            android:paddingTop="2dp"
                            android:text="@string/song_details_play_now" />


                    </LinearLayout>


                </LinearLayout>


                <TextView
                    android:layout_marginLeft="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/song_details_similar_songs"
                    android:textSize="18sp" />

                <HorizontalScrollView
                    android:id="@+id/related_albums"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp">

                    <include layout="@layout/related_songs_list" />
                </HorizontalScrollView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:padding="10dp"
                    android:text="@string/song_description_placeholder"
                    />

            </LinearLayout>
        </ScrollView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1">

            <include layout="@layout/player" />
        </LinearLayout>
    </LinearLayout>
    <android.support.design.widget.FloatingActionButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/add"
        android:id="@+id/add_songs"
        android:layout_gravity="center_vertical|start"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="40dp"
        app:layout_anchor="@+id/linearLayout"
        app:layout_anchorGravity="top|right"
        app:backgroundTint="@color/play"
        />
</android.support.design.widget.CoordinatorLayout>