<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.musical.Songs.AddSongs"
    android:background="@color/play"
    >
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/play_dark"
        android:gravity="center"
        android:paddingTop="20dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:textSize="26sp"
                android:padding="10dp"
                android:layout_centerInParent="true"
                />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_redo"
                android:background="@color/play_dark"
                android:layout_centerVertical="true"
                android:padding="10dp"
                android:layout_marginStart="10dp"
                android:onClick="backMain"
                />
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFECB3"
            android:padding="16dp"
            android:textColor="@android:color/black"
            android:textAppearance="?android:textAppearanceSmall"
            android:text="@string/add_songs_description" />
    </android.support.design.widget.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/play_dark"
                android:orientation="vertical"
                android:paddingTop="25dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_songs_from_device"
                    android:textSize="18sp"
                    android:padding="16dp"
                    />
                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:drawableStart="@drawable/scan"
                    android:gravity="center"
                    android:paddingBottom="2dp"
                    android:paddingTop="2dp"
                    android:text="@string/add_songs_scan_device" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/play_dark"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/add_songs_from_store"
                    android:textSize="18sp"
                    android:padding="16dp"
                    />

                <include layout="@layout/store_item" />

                <include layout="@layout/store_item" />

                <include layout="@layout/store_item" />

                <include layout="@layout/store_item" />

                <include layout="@layout/store_item" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>

